--- a/Firmware/Vez330AWD-printer.cfg
+++ b/Firmware/Vez330AWD-printer.cfg
@@ -1,6 +1,9 @@
+### For Fly Super 8 ####
+
 [include mainsail.cfg]
 [include timelapse.cfg]
 #[include PIS.cfg] this is the fysetc accelerometer
+#[include crampon.cfg] This is the Annex Crampon accelerometer
 
 ##### VzBoT############
 #######################
@@ -11,7 +14,7 @@ max_velocity: 2500
 max_accel: 10000
 #max_accel_to_decel: 5000
 max_z_velocity: 20
-max_z_accel: 1000
+max_z_accel: 1500
 square_corner_velocity: 10
 
 ########################
@@ -19,7 +22,7 @@ square_corner_velocity: 10
 
 
 [mcu]
-serial:/dev/serial/by-id/usb-Klipper_stm32h743xx_320035000B51303435393237-if00
+serial:/dev/serial/by-id/[replace with your own board ID] 
 #restart_method: command
 
 [mcu rpi]
@@ -28,7 +31,7 @@ serial: /tmp/klipper_host_mcu
 #[adxl345]
 #cs_pin: rpi:None
 
-#[resonance_tester]
+#[resonance_tester] This is for accel sensor connected to Pi
 #accel_chip: adxl345
 #probe_points:
 #    155,155,20  # an example
@@ -42,8 +45,8 @@ step_pin: PE15
 dir_pin: PE11
 enable_pin: !PF2
 rotation_distance: 40
-microsteps: 32
-full_steps_per_rotation: 400  
+microsteps: 16
+full_steps_per_rotation: 200  
 endstop_pin: ^PG11
 position_endstop: -19
 position_min: -19
@@ -51,9 +54,9 @@ position_max: 315
 homing_speed: 50  
 homing_retract_dist: 0
 [tmc5160 stepper_x] 
-spi_bus: spi1a 
+spi_bus: spi3 
 cs_pin: PE10
-interpolate: false 
+interpolate: false
 run_current: 1.75
 sense_resistor: 0.033
 stealthchop_threshold: 0
@@ -65,15 +68,14 @@ step_pin: PE0
 dir_pin: PG3
 enable_pin: !PG4
 rotation_distance: 40
-microsteps: 32
-full_steps_per_rotation: 400
+microsteps: 16
+full_steps_per_rotation: 200
 [tmc5160 stepper_x1] 
-spi_bus: spi1a
+spi_bus: spi3
 cs_pin: PG2
 interpolate: false
 run_current: 1.75
 sense_resistor: 0.033
-spi_speed: 1000000
 stealthchop_threshold: 0
 
 
@@ -83,8 +85,8 @@ step_pin: PE1
 dir_pin: PF0
 enable_pin: !PC15
 rotation_distance: 40
-microsteps: 32
-full_steps_per_rotation: 400  
+microsteps: 16
+full_steps_per_rotation: 200  
 endstop_pin: ^PG12
 position_endstop: -0
 position_min: -0
@@ -92,7 +94,7 @@ position_max: 310
 homing_speed: 50  
 homing_retract_dist: 0
 [tmc5160 stepper_y] 
-spi_bus: spi1a
+spi_bus: spi3
 cs_pin: PF1
 interpolate: false
 run_current: 1.75
@@ -108,10 +110,10 @@ step_pin: PE6
 dir_pin: PG6
 enable_pin: !PG7
 rotation_distance: 40
-microsteps: 32
-full_steps_per_rotation: 400 
+microsteps: 16
+full_steps_per_rotation: 200 
 [tmc5160 stepper_y1] 
-spi_bus: spi1a
+spi_bus: spi3
 cs_pin: PG5
 interpolate: false
 run_current: 1.75
@@ -136,7 +138,7 @@ second_homing_speed: 2.5
 [tmc2209 stepper_z]
 interpolate: false
 uart_pin: PC4
-run_current: 1.4
+run_current: 1.5
 hold_current: 1
 sense_resistor: 0.110
 stealthchop_threshold: 0
@@ -154,13 +156,13 @@ rotation_distance: 4.55
 nozzle_diameter: 0.5
 filament_diameter: 1.750
 heater_pin: PB0
-sensor_type: PT1000
+sensor_type: ATC Semitec 104GT-2
 sensor_pin: PF4
 ###
 control: pid
-pid_kp = 22.348
-pid_ki = 1.655
-pid_kd = 75.426
+pid_Kp=28.737 
+pid_Ki=1.935 
+pid_Kd=106.684
 min_temp: 0
 max_temp: 400
 full_steps_per_rotation: 200
@@ -169,9 +171,8 @@ max_extrude_cross_section: 500
 max_extrude_only_velocity: 200
 max_extrude_only_accel: 10000
 min_extrude_temp: 0
-pressure_advance: 0.04
+pressure_advance: 0.02
 pressure_advance_smooth_time: 0.04
-step_pulse_duration: 0.000004
 [tmc2209 extruder]
 interpolate: false
 uart_pin: PF12
@@ -304,22 +305,15 @@ runout_gcode:
 ########################
 
 [firmware_retraction]
-retract_length: 0.6
-retract_speed: 50
-unretract_extra_length: 0
-unretract_speed: 50
+retract_length: 0.5
+retract_speed: 60
+unretract_extra_length: 0.00
+unretract_speed: 60
 
 ###########################################
 #########Custom PINs Definition ############
 ###########################################
 
-
-
-#[output_pin DSLR]
-#pin: rpi:gpio26
-#pwm: False
-#value: 1
-#shutdown_value:1
 
 [output_pin LED]
 #In FAN8 position
@@ -508,6 +502,14 @@ gcode:
 
     RESTORE_GCODE_STATE NAME=accelltest_state 
 
+
+[gcode_macro enable_stepper]
+gcode:
+ SET_STEPPER_ENABLE STEPPER=stepper_x ENABLE=1
+ SET_STEPPER_ENABLE STEPPER=stepper_x1 ENABLE=1
+ SET_STEPPER_ENABLE STEPPER=stepper_y ENABLE=1
+ SET_STEPPER_ENABLE STEPPER=stepper_y1 ENABLE=1
+
 ################################################################################################
 ################################################################################################
 
@@ -535,9 +537,8 @@ screw4: 290,20
 ########################
 
 [input_shaper]
-shaper_freq_x: 115
+shaper_freq_x: 118
 shaper_type_x: mzv
-shaper_freq_y: 79
-shaper_type_y: zv
-
+shaper_freq_y: 81
+shaper_type_y: mzv
 
