--- a/Firmware/Vez330AWD-printer.cfg
+++ b/Firmware/Vez330AWD-printer.cfg
@@ -210,7 +210,7 @@ hardware_pwm: false
 shutdown_speed: 0
 
 [heater_fan hotend_fan]
-##	Hotend Fan - FAN0 Connector
+##	Hotend Fan - FAN0 Connector (or watercooling pump+fan on radiator)
 pin: PA0
 max_power: 1.0
 kick_start_time: 0.5
