--- a/Firmware/330AWD-printer.cfg
+++ b/Firmware/330AWD-printer.cfg
@@ -1,10 +1,21 @@
-### For Fly Super PRO 8 ####
+### For Fly Super 8 V1.3 ####
 ### And Mellow Kit  ####
-### For Fly Super non pro, the SPI bus is spi3
+### For Fly Super pro 8, the SPI bus is spi1A
+### For Fly Super 8 V1.3, the SPI bus is spi3
+
 [include mainsail.cfg]
 [include timelapse.cfg]
-#[include PIS.cfg] this is the fysetc accelerometer
-#[include crampon.cfg] This is the Annex Crampon accelerometer
+[include Exclude_Object.cfg]
+[include Start_Stop.cfg]
+[include Macro.cfg]
+[include Speed.cfg]
+[display_status]
+[exclude_object]
+[virtual_sdcard]
+path: ~/gcode_files
+[pause_resume]
+recover_velocity: 350
+
 
 ##### VzBoT############
 #######################
@@ -23,131 +34,246 @@ square_corner_velocity: 10
 
 
 [mcu]
-serial:/dev/serial/by-id/[replace with your own board ID] 
+serial: /dev/serial/by-id/usb-Klipper_stm32f407xx_3E0023000E47323236333832-if00  # put your own Serial here.
 #restart_method: command
+
+[temperature_sensor FLY-Super8]
+sensor_type: temperature_mcu
 
 [mcu rpi]
 serial: /tmp/klipper_host_mcu
 
-#[adxl345] (if you run sensor connected to Pi)
-#cs_pin: rpi:None
-
-#[resonance_tester] This is for accel sensor connected to Pi
-#accel_chip: adxl345
-#probe_points:
-#    155,155,20  # an example
+[temperature_sensor raspberry_pi]
+sensor_type: temperature_host
+min_temp: 10
+max_temp: 100
 
 ########################
 ########################
 
 [stepper_x]
-##	in M3 position
-step_pin: PE14
-dir_pin: PE8
-enable_pin: !PE9
-rotation_distance: 40
-microsteps: 16
-full_steps_per_rotation: 200  
-endstop_pin: ^PG11
-position_endstop: -19
-position_min: -19
-position_max: 315
-homing_speed: 35  
-homing_retract_dist: 0
-[tmc5160 stepper_x] 
-spi_bus: spi1a 
-#spi_software_mosi_pin: PB5
-#spi_software_miso_pin: PB4
-#spi_software_sclk_pin: PB3
-cs_pin: PE7
-interpolate: false
-run_current: 1.75
-sense_resistor: 0.033
-driver_TBL: 0
-driver_TOFF: 1
-
-
-[stepper_x1]
-##	in M5 position
-step_pin: PE1
-dir_pin: PF0
-enable_pin: !PC15
-rotation_distance: 40
-microsteps: 16
-full_steps_per_rotation: 200
-[tmc5160 stepper_x1] 
-spi_bus: spi1a
-#spi_software_mosi_pin: PB5
-#spi_software_miso_pin: PB4
-#spi_software_sclk_pin: PB3
-cs_pin: PF1
-interpolate: false
-run_current: 1.75
-sense_resistor: 0.033
-driver_TBL: 0
-driver_TOFF: 1
-
-
-[stepper_y]
-##	in M4 position
-step_pin: PE15
-dir_pin: PE11
-enable_pin: !PF2
-rotation_distance: 40
-microsteps: 16
-full_steps_per_rotation: 200  
-endstop_pin: ^PG12
-position_endstop: -0
-position_min: -0
-position_max: 310
-homing_speed: 35  
-homing_retract_dist: 0
-[tmc5160 stepper_y] 
-spi_bus: spi1a
-#spi_software_mosi_pin: PB5
-#spi_software_miso_pin: PB4
-#spi_software_sclk_pin: PB3
-cs_pin: PE10
-interpolate: false
-run_current: 1.75
-sense_resistor: 0.033
-driver_TBL: 0
-driver_TOFF: 1
-
-
-
-
-[stepper_y1]
 ##	in M6 position
 step_pin: PE0
 dir_pin: PG3
 enable_pin: !PG4
 rotation_distance: 40
 microsteps: 16
-full_steps_per_rotation: 200 
-[tmc5160 stepper_y1] 
-spi_bus: spi1a
-#spi_software_mosi_pin: PB5
-#spi_software_miso_pin: PB4
-#spi_software_sclk_pin: PB3
+full_steps_per_rotation: 200  
+endstop_pin: PF10            #make sure to set the correct pin here.
+position_endstop: 0
+position_min: 0
+position_max: 330
+homing_speed: 50 
+homing_retract_dist: 0
+
+[tmc5160 stepper_x] 
+#spi_bus: spi3
 cs_pin: PG2
+#diag_pin: PA8
 interpolate: false
-run_current: 1.75
+run_current: 1.9
 sense_resistor: 0.033
-driver_TBL: 0
-driver_TOFF: 1
+spi_software_mosi_pin: PB5
+spi_software_miso_pin: PB4
+spi_software_sclk_pin: PB3
+#driver_SGT: -64 # -64 is most sensitive value, 63 is least sensitive
+driver_IHOLDDELAY: 10
+driver_TPOWERDOWN: 128
+driver_TBL: 1
+driver_TOFF: 3
+driver_HEND: 2
+driver_HSTRT: 4
+driver_FD3: 0
+driver_TPFD: 0
+driver_CHM: 0
+driver_VHIGHFS: 0
+driver_VHIGHCHM: 0
+driver_DISS2G: 1
+driver_DISS2VS: 1
+driver_PWM_AUTOSCALE: True
+driver_PWM_AUTOGRAD: True
+driver_PWM_FREQ: 1
+driver_FREEWHEEL: 0
+driver_PWM_GRAD: 14
+driver_PWM_OFS: 36
+driver_PWM_REG: 8
+driver_PWM_LIM: 12
+driver_SGT: 0
+driver_SEMIN: 0
+driver_SEUP: 0
+driver_SEMAX: 0
+driver_SEDN: 0
+driver_SEIMIN: 0
+driver_SFILT: 0
+
+
+[stepper_x1]
+##	in M5 position
+step_pin: PE1
+dir_pin: !PF0
+enable_pin: !PC15
+rotation_distance: 40
+microsteps: 16
+full_steps_per_rotation: 200
+#endstop_pin: tmc5160_stepper_x:virtual_endstop 
+
+[tmc5160 stepper_x1] 
+#spi_bus: spi3
+cs_pin: PF1
+#diag_pin: PD6
+interpolate: false
+run_current: 1.9
+sense_resistor: 0.033
+spi_software_mosi_pin: PB5
+spi_software_miso_pin: PB4
+spi_software_sclk_pin: PB3
+#driver_SGT: -64 # -64 is most sensitive value, 63 is least sensitive
+driver_IHOLDDELAY: 10
+driver_TPOWERDOWN: 128
+driver_TBL: 1
+driver_TOFF: 3
+driver_HEND: 2
+driver_HSTRT: 4
+driver_FD3: 0
+driver_TPFD: 0
+driver_CHM: 0
+driver_VHIGHFS: 0
+driver_VHIGHCHM: 0
+driver_DISS2G: 1
+driver_DISS2VS: 1
+driver_PWM_AUTOSCALE: True
+driver_PWM_AUTOGRAD: True
+driver_PWM_FREQ: 1
+driver_FREEWHEEL: 0
+driver_PWM_GRAD: 14
+driver_PWM_OFS: 36
+driver_PWM_REG: 8
+driver_PWM_LIM: 12
+driver_SGT: 0
+driver_SEMIN: 0
+driver_SEUP: 0
+driver_SEMAX: 0
+driver_SEDN: 0
+driver_SEIMIN: 0
+driver_SFILT: 0
+
+
+[stepper_y]
+##	in M4 position
+step_pin: PE15
+dir_pin: !PE11
+enable_pin: !PF2
+rotation_distance: 40
+microsteps: 16
+full_steps_per_rotation: 200  
+endstop_pin: PC0                 #make sure to set the correct pin here.
+position_endstop: -0
+position_min: 0
+position_max: 330
+homing_speed: 50  
+homing_retract_dist: 0
+
+[tmc5160 stepper_y] 
+#spi_bus: spi3
+cs_pin: PE10
+#diag_pin: PD7
+interpolate: false
+run_current: 1.9
+sense_resistor: 0.033
+spi_software_mosi_pin: PB5
+spi_software_miso_pin: PB4
+spi_software_sclk_pin: PB3
+#driver_SGT: -64 # -64 is most sensitive value, 63 is least sensitive
+driver_IHOLDDELAY: 10
+driver_TPOWERDOWN: 128
+driver_TBL: 1
+driver_TOFF: 3
+driver_HEND: 2
+driver_HSTRT: 4
+driver_FD3: 0
+driver_TPFD: 0
+driver_CHM: 0
+driver_VHIGHFS: 0
+driver_VHIGHCHM: 0
+driver_DISS2G: 1
+driver_DISS2VS: 1
+driver_PWM_AUTOSCALE: True
+driver_PWM_AUTOGRAD: True
+driver_PWM_FREQ: 1
+driver_FREEWHEEL: 0
+driver_PWM_GRAD: 14
+driver_PWM_OFS: 36
+driver_PWM_REG: 8
+driver_PWM_LIM: 12
+driver_SGT: 0
+driver_SEMIN: 0
+driver_SEUP: 0
+driver_SEMAX: 0
+driver_SEDN: 0
+driver_SEIMIN: 0
+driver_SFILT: 0
+
+[stepper_y1]
+##	in M3 position
+step_pin: PE14
+dir_pin: PE8
+enable_pin: !PE9
+rotation_distance: 40
+microsteps: 16
+full_steps_per_rotation: 200
+#endstop_pin: tmc5160_stepper_y:virtual_endstop  
+
+[tmc5160 stepper_y1] 
+#spi_bus: spi3
+cs_pin: PE7
+#diag_pin: PG9
+interpolate: false
+run_current: 1.9
+sense_resistor: 0.033
+spi_software_mosi_pin: PB5
+spi_software_miso_pin: PB4
+spi_software_sclk_pin: PB3
+#driver_SGT: -64 # -64 is most sensitive value, 63 is least sensitive
+driver_IHOLDDELAY: 10
+driver_TPOWERDOWN: 128
+driver_TBL: 1
+driver_TOFF: 3
+driver_HEND: 2
+driver_HSTRT: 4
+driver_FD3: 0
+driver_TPFD: 0
+driver_CHM: 0
+driver_VHIGHFS: 0
+driver_VHIGHCHM: 0
+driver_DISS2G: 1
+driver_DISS2VS: 1
+driver_PWM_AUTOSCALE: True
+driver_PWM_AUTOGRAD: True
+driver_PWM_FREQ: 1
+driver_FREEWHEEL: 0
+driver_PWM_GRAD: 14
+driver_PWM_OFS: 36
+driver_PWM_REG: 8
+driver_PWM_LIM: 12
+driver_SGT: 0
+driver_SEMIN: 0
+driver_SEUP: 0
+driver_SEMAX: 0
+driver_SEDN: 0
+driver_SEIMIN: 0
+driver_SFILT: 0
 
 #########################
 
 [stepper_z]
-## In M0 position
-step_pin: PE2
-dir_pin: !PC5
-enable_pin: !PF11
+## In M1 position
+step_pin: PE3
+dir_pin: !PF13
+enable_pin: !PF14
 microsteps: 32
 rotation_distance: 4
-endstop_pin: ^PG10
-position_endstop: 0.0
+endstop_pin:               #make sure to set the correct pin here.
+#position_endstop: 0.0
 position_max: 400
 full_steps_per_rotation: 200
 homing_retract_dist: 5.0
@@ -156,32 +282,36 @@ homing_speed: 5.0
 second_homing_speed: 2.5
 [tmc2209 stepper_z]
 interpolate: false
-uart_pin: PC4
-run_current: 1
-sense_resistor: 0.110
-
-
-#########################
+uart_pin: PF12
+run_current: 1.2
+stealthchop_threshold: 0
 
 [extruder]
-## In M1 position
+## In M0 position
 ### Vz-HextrudORT
-step_pin: PE3
-dir_pin: PF13
+step_pin: PE2
+dir_pin: PC5
+enable_pin: !PF11
 microsteps: 16
-enable_pin: !PF14
-rotation_distance: 22 
-gear_ratio: 50:10 
+#Alu VZhextrudort Moons 8T
+rotation_distance: 22.2
+Gear_ratio: 50:8
+#Alu VZhextrudort Moons 10T
+#rotation_distance: 22 
+#gear_ratio: 50:10 
+#VZHextrudort LDO 20mm
+#rotation_distance: 4.71
 nozzle_diameter: 0.5
 filament_diameter: 1.750
+
 heater_pin: PB0
 sensor_type: PT1000
 sensor_pin: PF4
-###
-control: pid
-pid_Kp=28.737 
-pid_Ki=1.935 
-pid_Kd=106.684
+
+#control: pid
+#pid_Kp=28.737 
+#pid_Ki=1.935 
+#pid_Kd=106.684
 min_temp: 0
 max_temp: 400
 full_steps_per_rotation: 200
@@ -192,13 +322,12 @@ max_extrude_only_accel: 10000
 min_extrude_temp: 0
 pressure_advance: 0.02
 pressure_advance_smooth_time: 0.03
+
 [tmc2209 extruder]
+uart_pin: PC4
 interpolate: false
-uart_pin: PF12
 run_current: 0.7
 sense_resistor: 0.110
-
-
 
 ########################
 ########################
@@ -207,10 +336,10 @@ sense_resistor: 0.110
 heater_pin: PE5
 sensor_type: Generic 3950
 sensor_pin: PC1
-control: pid
-pid_Kp: 66.746
-pid_Ki: 3.504
-pid_Kd: 317.878
+#control: pid
+#pid_Kp: 66.746
+#pid_Ki: 3.504
+#pid_Kd: 317.878
 min_temp: 0
 max_temp: 130
 
@@ -220,50 +349,51 @@ max_temp: 130
 ########################
 
 [fan]
-##	Print Cooling Fan 
+##	Print Cooling Fan - PF8
 pin: PF8
-max_power: 0.9
+max_power: 1
 cycle_time: 0.002
 hardware_pwm: false
 shutdown_speed: 0
 
 [heater_fan hotend_fan]
-##	Hotend Fan - FAN0 Connector (or watercooling pump+fan on radiator)
+##	Hotend Fan - FAN0 Connector
+## in case of a watercooler that is 24V use a Heater Pin like PF7 Heat3 for a larger mosfet that can handle more amps.
 pin: PA0
 max_power: 1.0
 kick_start_time: 0.5
 heater: extruder
 heater_temp: 50.0
 
-[fan_generic Exhaust_fan]
+#[fan_generic Exhaust_fan]
 ##  exhaust fan - In FAN4
-pin: PA15
-max_power: 1
-shutdown_speed: 0
-kick_start_time: 0.1
-off_below: 0.10
+#pin: PA15
+#max_power: 1
+#shutdown_speed: 0
+#kick_start_time: 0.1
+#off_below: 0.10
 
-[fan_generic chamber_fan]
-##  chamber fan - In FAN9 Positon
-pin: PD15
-max_power: 1
-shutdown_speed: 0
-kick_start_time: 0.1
-off_below: 0.10
+#[fan_generic chamber_fan]
+###  chamber fan - In FAN9 Positon
+#pin: PD15
+#max_power: 1
+#shutdown_speed: 0
+#kick_start_time: 0.1
+#off_below: 0.10
 
-[fan_generic RSCS]
+#[fan_generic RSCS]
 ##  RSCS Fans - In FAN1 Positon
-pin: PA1
-max_power: 1
-shutdown_speed: 0
-kick_start_time: 0.1
-off_below: 0.10
+#pin: PA1
+#max_power: 1
+#shutdown_speed: 0
+#kick_start_time: 0.1
+#off_below: 0.10
 
 #[controller_fan driver_fan] 
 # This is if you connect your driver fan to Super8 
 #or if you want to add fan to the Super8. Other wise connect them in the driver fan ports
 #stepper: stepper_x
-#pin: PB11
+#pin: PD14
 #max_power: 1
 #shutdown_speed: 0
 #kick_start_time: 0.1
@@ -271,289 +401,48 @@ off_below: 0.10
 
 ########################
 ########################
-[temperature_sensor FLY-Super8]
-sensor_type: temperature_mcu
 
 #[temperature_sensor chamber]  optional for chamber temp
 #sensor_type: NTC 100K MGB18-104F39050L32
 #pullup_resistor: 4700
-#sensor_pin: PF9
+#sensor_pin: PF5
 #min_temp: 0
 #max_temp: 60
 #gcode_id: C: C
 
-
-[temperature_sensor raspberry_pi]
-sensor_type: temperature_host
-min_temp: 10
-max_temp: 100
-
-
-
-########################
-########################
-
-[pause_resume]
-recover_velocity: 350
-
-########################
-########################
-
-[filament_switch_sensor sentinel]
-pause_on_runout: true
-switch_pin: PA8
-runout_gcode:
-	G91
-    G1 E-30 F2500
-  	G90
-	G1 X0 Y0 F30000
-  	M104 S0
-
-########################
-########################
-
-#[homing_override]
-#set_position_z: 0
-#axes: xy
-#gcode:
-# G0 Z3 F200
-# G28 y0 
-# G28 x0
-# G28 Z0
-
-########################
-########################
-
-[firmware_retraction]
-retract_length: 0.5
-retract_speed: 60
-unretract_extra_length: 0.00
-unretract_speed: 60
+#[temperature_sensor Bed_Edge]
+#Sensor_type: Generic 3950
+#sensor_pin:PF4
 
 ###########################################
 #########Custom PINs Definition ############
 ###########################################
 
-
-[output_pin LED]
-#In FAN8 position
-pin: PD14
-pwm: false
-value: 1
-shutdown_value:1
+#[output_pin LED]
+#In FAN8 position if 12 or 5V
+#When 24V use a heater pin like Heat4 PF6
+#pin: PF6
+#pwm: false
+#value: 1
+#shutdown_value:1
 ### gcode command: SET_PIN PIN=LED value=0 to 1
 
-
-
-################################################################################################
-################################################################################################
-#####				MACROS					
-
-##################
-[gcode_macro RETRACTION_UP]
-gcode:
-    {% set CRLEN = printer.firmware_retraction.retract_length|float %}
-    {% set NRLEN = CRLEN|float + 0.1 %}
-    { action_respond_info("current retract_length %.2f, new retract_length %.2f" % (CRLEN, NRLEN))  }
-    SET_RETRACTION RETRACT_LENGTH={NRLEN}    
-
-[gcode_macro RETRACTION_DOWN]
-gcode:
-    {% set CRLEN = printer.firmware_retraction.retract_length|float %}
-    {% set NRLEN = CRLEN|float - 0.1 %}
-    { action_respond_info("current retract_length %.2f, new retract_length %.2f" % (CRLEN, NRLEN))  }
-    SET_RETRACTION RETRACT_LENGTH={NRLEN}   
-
-
-#[gcode_macro SET_RETRACTIONLENGTH]
-#gcode:
-#  SET_RETRACTION RETRACT_LENGTH={params.LENGTH|float}
-#  GET_RETRACTION
-
-########################	
-[gcode_macro exhaustfan_on]
-gcode: 
-	SET_FAN_SPEED FAN=Exhaust_fan SPEED=1
-###	
-	
-[gcode_macro exhaustfan_off]
-gcode: 
-	SET_FAN_SPEED FAN=Exhaust_fan SPEED=0
-	
-	
-###		
-	
-[gcode_macro enclosurefan_on]
-gcode: 
-	SET_FAN_SPEED FAN=chamber_fan SPEED=1
-
-###			
-	
-[gcode_macro enclosurefan_off]
-gcode: 
-	SET_FAN_SPEED FAN=chamber_fan SPEED=0
-
-
-[gcode_macro RSCS_on]
-gcode: 
-	SET_FAN_SPEED FAN=RSCS SPEED=1
-###	
-	
-
-[gcode_macro RSCS_off]
-gcode: 
-	SET_FAN_SPEED FAN=RSCS SPEED=0
-		
-###
-
-[gcode_macro LED_on]
-gcode:
-	SET_PIN PIN=LED value=1   
-
-
-[gcode_macro LED_off]
-gcode:
-	SET_PIN PIN=LED value=0  
-
-###	
-	
-[gcode_macro PA_tunning]
-gcode: 
-	SET_VELOCITY_LIMIT SQUARE_CORNER_VELOCITY=1 ACCEL=500
-	TUNING_TOWER COMMAND=SET_PRESSURE_ADVANCE PARAMETER=ADVANCE START=0 FACTOR=.005
-
-
-#####
-
-[gcode_macro POWER_OFF]
-gcode:
-  {action_call_remote_method("set_device_power",
-                             device="tplink",
-                             state="off")}
-#####	
-
-[gcode_macro TEST_RESONNANCES_X]
-gcode:
- TEST_RESONANCES AXIS=X
-
-
-[gcode_macro TEST_RESONNANCES_Y]
-gcode:
- TEST_RESONANCES AXIS=Y
-
-[gcode_macro DUMP_WARNINGS]
-description: Debug: Print all warning messages from klipper
-gcode:
-  {% set parameters = ["printer.configfile.warnings:"] %}
-  {% for warning in printer.configfile.warnings %}
-      {% set parameters = parameters.append("%s -> %s -> %s\n%s" % (warning.type, warning.section, warning.option, warning.message)) %}
-  {% endfor %}
-  {action_respond_info(parameters|join("\n"))}
-
-
-[gcode_macro ACCELL_TEST_X]
-gcode:
-
-    {% set steps = params.STEPS|default(100)|int %}
-    {% set speed = params.VELOCITY|default(1000)|float * 60 %}
-
-    {% set inset = 10.0|float %}
-    {% set accel = 10000|int %}
-    {% set maxX = printer.configfile.settings.stepper_x.position_max|float - inset %}
-    {% set maxY = printer.configfile.settings.stepper_y.position_max|float - inset %}
-    {% set minX = printer.configfile.settings.stepper_x.position_min|float + inset %}
-    {% set minY = printer.configfile.settings.stepper_y.position_min|float + inset %}
-
-    SAVE_GCODE_STATE NAME=accelltest_state
-
-    SET_VELOCITY_LIMIT ACCEL={accel} 
-    SET_VELOCITY_LIMIT ACCEL_TO_DECEL={accel}
-    G28
-	G1 Z5
-    G1 X{minX} Y{minY} F{speed} 
-
-    {% for INTERVAL in range(steps) %}
-        {% set eff = accel + (INTERVAL * 1000) %} 
-        SET_VELOCITY_LIMIT ACCEL={eff} 
-        SET_VELOCITY_LIMIT ACCEL_TO_DECEL={eff}
-        G1 X{minX} Y{minY} F{speed}  
-        G1 X{maxX} Y{maxY} F{speed}  
-
-    {% endfor %}    
-
-    RESTORE_GCODE_STATE NAME=accelltest_state 
-	
-	
-	
-[gcode_macro ACCELL_TEST_Y]
-gcode:
-
-    {% set steps = params.STEPS|default(100)|int %}
-    {% set speed = params.VELOCITY|default(1000)|float * 60 %}
-
-    {% set inset = 10.0|float %}
-    {% set accel = 10000|int %}
-    {% set maxX = printer.configfile.settings.stepper_x.position_max|float - inset %}
-    {% set maxY = printer.configfile.settings.stepper_y.position_max|float - inset %}
-    {% set minX = printer.configfile.settings.stepper_x.position_min|float + inset %}
-    {% set minY = printer.configfile.settings.stepper_y.position_min|float + inset %}
-
-    SAVE_GCODE_STATE NAME=accelltest_state
-
-    SET_VELOCITY_LIMIT ACCEL={accel} 
-    SET_VELOCITY_LIMIT ACCEL_TO_DECEL={accel}
-    G28
-	G1 Z5
-    G1 X{minX} Y{minY} F{speed} 
-
-    {% for INTERVAL in range(steps) %}
-        {% set eff = accel + (INTERVAL * 1000) %} 
-        SET_VELOCITY_LIMIT ACCEL={eff} 
-        SET_VELOCITY_LIMIT ACCEL_TO_DECEL={eff}
-        G1 X{maxX} Y{minY} F{speed}  
-        G1 X{minX} Y{maxY} F{speed}  
-
-    {% endfor %}    
-
-    RESTORE_GCODE_STATE NAME=accelltest_state 
-
-
-[gcode_macro enable_stepper]
-gcode:
- SET_STEPPER_ENABLE STEPPER=stepper_x ENABLE=1
- SET_STEPPER_ENABLE STEPPER=stepper_x1 ENABLE=1
- SET_STEPPER_ENABLE STEPPER=stepper_y ENABLE=1
- SET_STEPPER_ENABLE STEPPER=stepper_y1 ENABLE=1
+[idle_timeout]
+timeout: 1800
+gcode =
+  {% if printer.pause_resume.is_paused %}
+    M104 S0
+  {% else %}
+    TURN_OFF_HEATERS
+    #M84
+  {% endif %}
 
 ################################################################################################
+##                                        Probe                                               ##
 ################################################################################################
 
-
-
-[virtual_sdcard]
-path: ~/gcode_files
-
-########################
-########################
-
-[display_status]
-
-########################
-########################
-
-[bed_screws]
-screw1: 20,20
-screw2: 20,290
-screw3: 290,290
-screw4: 290,20
-
-
-########################
-########################
-
-[input_shaper]
-shaper_freq_x: 118
-shaper_type_x: mzv
-shaper_freq_y: 81
-shaper_type_y: mzv
-
+#[bed_screws]
+#screw1: 20,20
+#screw2: 20,290
+#screw3: 290,290
+#screw4: 290,20
