--- a/Firmware/330AWD-printer.cfg
+++ b/Firmware/330AWD-printer.cfg
@@ -16,6 +16,9 @@ path: ~/gcode_files
 [pause_resume]
 recover_velocity: 350
 
+# Enable arcs support for Orcaslicer.
+[gcode_arcs]
+resolution: 0.1
 
 ##### VzBoT############
 #######################
