--- a/Firmware/RSCS_fan.cfg
+++ b/Firmware/RSCS_fan.cfg
@@ -4,57 +4,26 @@
 [gcode_macro M106]
 rename_existing: G106
 gcode:
-	{% if params.P is defined %}
-		{% if params.P|int == 2 %}
-			{% if params.S is defined %}
-				{% if params.S|int == 255 %}
-					{% set realspeed = 1 %}
-				{% else %}
-					{% if params.S|int == 0 %}
-						{% set realspeed = 0 %}
-					{% else %}
-						{% set realspeed = params.S|float/255 %}
-					{% endif %}
-				{% endif %}
-			{% else %}
-				{% set realspeed = 1 %}
-			{% endif %}
+    {% set fan = params.P|default(1)|int %}
+    {% set speed = params.S|default(255)|int %}
+    {% set realspeed = speed/255 %}
 
-			SET_FAN_SPEED FAN=RSCS SPEED={realspeed}
-		{% elif params.P|int == 3 %}
-			{% if params.S is defined %}
-				{% if params.S|int == 255 %}
-					{% set realspeed = 1 %}
-				{% else %}
-					{% if params.S|int == 0 %}
-						{% set realspeed = 0 %}
-					{% else %}
-						{% set realspeed = params.S|float/255 %}
-					{% endif %}
-				{% endif %}
-			{% else %}
-				{% set realspeed = 1 %}
-			{% endif %}
-
-			SET_FAN_SPEED FAN=Exhaust_fan SPEED={realspeed}
-		{% endif %}
+	{% if fan == 2 %}
+		SET_FAN_SPEED FAN=RSCS SPEED={realspeed}
+	{% elif fan == 3 %}
+		SET_FAN_SPEED FAN=Exhaust_fan SPEED={realspeed}
 	{% else %}
-		{% if params.S is defined %}
-		  G106 S{params.S}
-		{% else %}
-		  G106 S255
-		{% endif %}
+        G106 S{params.S}
 	{% endif %}
 
 [gcode_macro M107]
 rename_existing: G107
 gcode:
-	{% if params.P is defined %}
-	  {% if params.P|int == 2 %}
+    {% set fan = params.P|default(1)|int %}
+	{% if fan == 2 %}
 		SET_FAN_SPEED FAN=RSCS SPEED=0
-	  {% elif params.P|int == 3 %}
-		SET_FAN_SPEED FAN=Exhaust_fan SPEED=0
-	  {% endif %}      
+	{% elif fan == 3 %}
+		SET_FAN_SPEED FAN=Exhaust_fan SPEED=0   
 	{% else %}
 	  SET_FAN_SPEED FAN=RSCS SPEED=0  
 	  SET_FAN_SPEED FAN=Exhaust_fan SPEED=0  
