--- a/Firmware/RSCS_fan.cfg
+++ b/Firmware/RSCS_fan.cfg
@@ -13,7 +13,7 @@ gcode:
 	{% elif fan == 3 %}
 		SET_FAN_SPEED FAN=Exhaust_fan SPEED={realspeed}
 	{% else %}
-        G106 S{params.S}
+        G106 S{speed}
 	{% endif %}
 
 [gcode_macro M107]
